Fix Login UI bugs and add ability to dismiss keyboard

--- a/ChannelChat/View/Base.lproj/Main.storyboard
+++ b/ChannelChat/View/Base.lproj/Main.storyboard
@@ -37,7 +37,7 @@
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <nil key="textColor"/>
                                 <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="20"/>
-                                <textInputTraits key="textInputTraits" autocapitalizationType="words"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="words" returnKeyType="done"/>
                             </textField>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Chat with like-minded people about topics that interest you." textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="A0X-NW-3dL">
                                 <rect key="frame" x="52" y="194" width="271" height="57"/>
@@ -69,6 +69,7 @@
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                     <connections>
+                        <outlet property="loginButton" destination="hqI-Dk-5Og" id="XE6-8x-QZB"/>
                         <outlet property="nickNameField" destination="46s-vG-1nW" id="ra5-Hi-OhO"/>
                     </connections>
                 </viewController>
